[gd_scene load_steps=4 format=3 uid="uid://bqxvhqxqxqxq0"]

[ext_resource type="Script" uid="uid://dm2fl1kr1lopo" path="res://rive_loader_complete_demo.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bqxvhqxqxqxqx" path="res://addons/rive_runtime_loader/rive_runtime_panel.tscn" id="2"]
[ext_resource type="Script" uid="uid://dssjf1gyiefld" path="res://addons/rive_runtime_loader/rive_hotkey_controller.gd" id="3"]

[node name="RiveLoaderCompleteDemo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="HBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewerContainer" type="VBoxContainer" parent="HBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="RiveViewer" type="RiveViewer" parent="HBox/ViewerContainer"]
file_path = "res://examples/juice.riv"
artboard = 0
scene = -1
animation = 1
layout_mode = 2
size_flags_vertical = 3

[node name="StatusLabel" type="Label" parent="HBox/ViewerContainer"]
layout_mode = 2
text = "状态信息"
vertical_alignment = 1
autowrap_mode = 2

[node name="RiveRuntimePanel" parent="HBox" instance=ExtResource("2")]
layout_mode = 2
size_flags_horizontal = 3

[node name="RiveHotkeyController" type="Node" parent="."]
script = ExtResource("3")

[node name="HelpLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -250.0
offset_bottom = 200.0
grow_horizontal = 0
text = "快捷键帮助:
F1 - 切换控制面板
F2/F3 - 下一个/上一个文件
F4 - 重新加载文件
空格 - 暂停/播放
R - 重置动画
1-5 - 加载预设文件
←→ - 切换动画
↑↓ - 切换场景
H - 切换帮助显示
ESC - 退出"
vertical_alignment = 1
autowrap_mode = 2
